Email Preferences Styles

--- a/templates/system/subscription-preferences-bleu-2023.html
+++ b/templates/system/subscription-preferences-bleu-2023.html
@@ -68,7 +68,7 @@
                 {% end_module_block %}
               </div>
             </div>
-            <div class="span6">
+            <div class="span6 email-subscription--image">
               {% module "image"
                 path="@hubspot/linked_image",
                 offset=0,
