--- a/css/templates/email.css
+++ b/css/templates/email.css
@@ -43,7 +43,7 @@ display:none;
    padding: 5px;
 }
 .email-prefs-title {
-  padding:20px 20px 0px 20px;
+  padding:20px 20px 20px 20px;
 }
 
 #email-prefs-form .hs-button {
@@ -80,4 +80,7 @@ form input[type='submit'], form .hs-button {
 }
 .bg-1{
     background-color: rgba(242, 242, 242, 1);
+}
+.email-subscription--image img{
+  margin-bottom:-7px;
 }
